<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="recording">Recording</string>
    <string name="stop">Stop</string>
    <string name="standby">Standby</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="action_settings">Menu</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Settings</string>

    <string name="pref_title_social_recommendations">Auto-start recording</string>
    <string name="pref_description_social_recommendations">Enable or disable auto-start recording
    </string>

    <string name="pref_title_file_name">Video file name</string>
    <string name="pref_default_file_name">CarId</string>
    <string name="pref_description_file_name">Personalize video file names (recommanded your car id)</string>

    <string name="pref_title_video_size">Maximum videos size</string>
    <string name="pref_title_video_lenght">Video lenght</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1 GB</item>
        <item>2 GB</item>
        <item>4 GB</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">About</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries_values_file_size">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="list_preference_entries_file_size">
        <item>1 GB</item>
        <item>2 GB</item>
        <item>3 GB</item>
    </string-array>

    <string-array name="list_preference_entries_values_max_duration">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="list_preference_entries_max_duration">
        <item>5 MIN</item>
        <item>10 MIN</item>
        <item>15 MIN</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">About</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Car Recorder</string>

    <string name="vibrate_intro_label">Intro</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Intro -->
    <string name="intro_slide_1_title">Welcome to Car Recorder</string>
    <string name="intro_slide_1_text">Discover new roads!</string>

    <string name="intro_slide_2_title">Map</string>
    <string name="intro_slide_2_text">Check the traffic status!</string>

    <string name="intro_slide_3_title">Recording status</string>
    <string name="intro_slide_3_text">You can see any time if you are recording your trip!</string>

    <string name="intro_slide_4_title">Menu</string>
    <string name="intro_slide_4_text">Make your own settings!</string>

    <string name="intro_slide_5_title">Start or stop</string>
    <string name="intro_slide_5_text">Pressing the button you can start or stop the recording!</string>
</resources>